src/core-crm/objects/Document__c/Document__c.object-meta.xml
<CustomObject>
    <description>The Document data object stores metadata relating to documents stored outside the system. The object does not store the document itself.</description>
    <label>Document</label>
    <nameField>
        <displayFormat>DOC-{0000000}</displayFormat>
        <label>Document Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Documents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>