src/core-crm/objects/Document__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Description of the document</description>
    <inlineHelpText>The description about the document.</inlineHelpText>
    <label>Description</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>