src/core-crm/objects/Document__c/fields/Designation__c.field-meta.xml
<CustomField>
    <fullName>Designation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to Designation object.</description>
    <inlineHelpText>Lookup to Designation object.</inlineHelpText>
    <label>Designation</label>
    <referenceTo>Designation__c</referenceTo>
    <relationshipLabel>Documents</relationshipLabel>
    <relationshipName>Documents</relationshipName>
    <type>Lookup</type>
</CustomField>