src/core-crm/objects/Document__c/fields/Document_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Document_Completion_Date__c</fullName>
    <description>The date the user finalised the document.</description>
    <inlineHelpText>The date when the document was completed.</inlineHelpText>
    <label>Document Completion Date</label>
    <type>Date</type>
</CustomField>