src/core-crm/objects/Document__c/fields/Document_Date__c.field-meta.xml
<CustomField>
    <fullName>Document_Date__c</fullName>
    <description>The business entered document date.</description>
    <label>Document Date</label>
    <type>Date</type>
</CustomField>