src/core-crm/objects/Document__c/fields/Document_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Document_End_Date__c</fullName>
    <description>The date the user finalised the document.</description>
    <label>Document End Date</label>
    <type>Date</type>
</CustomField>