src/core-crm/objects/Document__c/fields/Document_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Document_Start_Date__c</fullName>
    <description>The date the user started developing/defining the document.</description>
    <inlineHelpText>The date when the document was started.</inlineHelpText>
    <label>Document Start Date</label>
    <type>Date</type>
</CustomField>