src/core-crm/objects/Document__c/fields/Document_Title__c.field-meta.xml
<CustomField>
    <fullName>Document_Title__c</fullName>
    <description>The business entered title of the document.</description>
    <label>Document Title</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>