src/core-crm/objects/Document__c/fields/Document_Type__c.field-meta.xml
<CustomField>
    <fullName>Document_Type__c</fullName>
    <description>The document type.</description>
    <label>Document Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Shareholder Agreement</fullName>
            </value>
            <value>
                <fullName>Constitution Agreement</fullName>
            </value>
            <value>
                <fullName>Share Certificate</fullName>
            </value>
            <value>
                <fullName>Director Indemnity</fullName>
            </value>
            <value>
                <fullName>Director Consent</fullName>
            </value>
            <value>
                <fullName>Subscription</fullName>
            </value>
            <value>
                <fullName>License Option and Assignment</fullName>
            </value>
            <value>
                <fullName>Distribution Deed</fullName>
            </value>
            <value>
                <fullName>Contract Research Agreement</fullName>
            </value>
            <value>
                <fullName>Confidentiality Agreement</fullName>
            </value>
            <value>
                <fullName>Material Transfer</fullName>
            </value>
            <value>
                <fullName>Grant Agreement</fullName>
            </value>
            <value>
                <fullName>Funding Agreement</fullName>
            </value>
            <value>
                <fullName>Collaborative Research Agreement</fullName>
            </value>
            <value>
                <fullName>Consultancy Agreement</fullName>
            </value>
            <value>
                <fullName>Commercial Revenue Waiver</fullName>
            </value>
            <value>
                <fullName>Start-up Company Legals</fullName>
            </value>
            <value>
                <fullName>IP Filing</fullName>
            </value>
            <value>
                <fullName>IP Renewal</fullName>
            </value>
            <value>
                <fullName>IP Prosecution</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Board Meeting Minutes</fullName>
            </value>
            <value>
                <fullName>Shareholder and Constitution Amendment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>