src/core-crm/objects/Document__c/fields/Document_URL__c.field-meta.xml
<CustomField>
    <fullName>Document_URL__c</fullName>
    <description>The URL of the document.</description>
    <label>Document URL</label>
    <required>true</required>
    <type>Url</type>
</CustomField>