src/core-crm/objects/Document__c/fields/Donation__c.field-meta.xml
<CustomField>
    <fullName>Donation__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Lookup to the Donation object.</description>
    <inlineHelpText>Lookup to the Donation object.</inlineHelpText>
    <label>Donation</label>
    <referenceTo>Donation__c</referenceTo>
    <relationshipLabel>Documents</relationshipLabel>
    <relationshipName>Documents</relationshipName>
    <type>Lookup</type>
</CustomField>