src/core-crm/objects/Document__c/fields/Donation_Cause__c.field-meta.xml
<CustomField>
    <fullName>Donation_Cause__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to Donation Cause object.</description>
    <inlineHelpText>Lookup to Donation Cause object.</inlineHelpText>
    <label>Donation Cause</label>
    <referenceTo>Donation_Cause__c</referenceTo>
    <relationshipLabel>Documents</relationshipLabel>
    <relationshipName>Documents</relationshipName>
    <type>Lookup</type>
</CustomField>