src/core-crm/objects/Document__c/fields/Engagement__c.field-meta.xml
<CustomField>
    <fullName>Engagement__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Lookup to related Engagement.</description>
    <label>Engagement</label>
    <referenceTo>Engagement__c</referenceTo>
    <relationshipLabel>Documents</relationshipLabel>
    <relationshipName>Documents</relationshipName>
    <type>Lookup</type>
</CustomField>