src/core-crm/objects/Document__c/fields/IP_Management__c.field-meta.xml
<CustomField>
    <fullName>IP_Management__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Lookup to related IP Management record.</description>
    <label>IP Management</label>
    <referenceTo>IP_Management__c</referenceTo>
    <relationshipLabel>Documents</relationshipLabel>
    <relationshipName>Documents</relationshipName>
    <type>Lookup</type>
</CustomField>