src/core-crm/objects/Document__c/fields/Opportunity_Outcome__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Outcome__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Lookup to related Opportunity Outcome.</description>
    <label>Opportunity Outcome</label>
    <referenceTo>Opportunity_Outcome__c</referenceTo>
    <relationshipLabel>Documents</relationshipLabel>
    <relationshipName>Documents</relationshipName>
    <type>Lookup</type>
</CustomField>