src/core-crm/objects/Document__c/fields/Stewardship__c.field-meta.xml
<CustomField>
    <fullName>Stewardship__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to Stewardship object.</description>
    <inlineHelpText>Lookup to Stewardship object.</inlineHelpText>
    <label>Stewardship</label>
    <referenceTo>Stewardship__c</referenceTo>
    <relationshipLabel>Documents</relationshipLabel>
    <relationshipName>Documents</relationshipName>
    <type>Lookup</type>
</CustomField>