src/core-crm/objects/Document__c/recordTypes/Advancement.recordType-meta.xml
<RecordType>
    <fullName>Advancement</fullName>
    <active>true</active>
    <description>Create a document record for an Advancement business process.</description>
    <label>Advancement</label>
</RecordType>