src/core-crm/objects/Document__c/recordTypes/Board_Meeting_Minutes.recordType-meta.xml
<RecordType>
    <fullName>Board_Meeting_Minutes</fullName>
    <active>true</active>
    <description>Capture Board Meeting Minutes and the document URL.</description>
    <label>Board Meeting Minutes</label>
</RecordType>