src/core-crm/objects/Document__c/recordTypes/Shareholder_and_Constitution_Amendment.recordType-meta.xml
<RecordType>
    <fullName>Shareholder_and_Constitution_Amendment</fullName>
    <active>true</active>
    <description>Capture Shareholder and Constitution Amendment and the document URL.</description>
    <label>Shareholder and Constitution Amendment</label>
</RecordType>