src/core-crm/objects/Document__c/recordTypes/Standard.recordType-meta.xml
<RecordType>
    <fullName>Standard</fullName>
    <active>true</active>
    <description>Capture document details and document URL.</description>
    <label>Standard</label>
</RecordType>