src/core-crm/objects/Document__c/validationRules/Engagement_UserRole_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Engagement_UserRole_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    Engagement__r.Id  !=null,
    NOT(ISNEW()),
    OR(
        $UserRole.Name = &quot;VP Business Development&quot;,
        $UserRole.Name = &quot;Executive Director Industry Engagement&quot;,
        $UserRole.Name = &quot;Operations Manager&quot;
      )
)</errorConditionFormula>
    <errorMessage>You don’t have the right permission to create or edit this record</errorMessage>
</ValidationRule>